--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,9 @@ dependencies {
     def retrofit_version = "2.6.1"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
+//    //Interceptor
+//    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+
     //Конвертер GSON и XML
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
