--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation files('libs/BarcodeAPI_V1_1_33.jar')
+    implementation files('libs/tscsdk.jar')
     implementation 'net.jcip:jcip-annotations:1.0'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.zxing:core:3.5.2'
+    implementation 'com.google.zxing:android-integration:3.3.0'
+
 
     def activity_version = "1.4.0"
     implementation "androidx.activity:activity-ktx:$activity_version"
