--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
-<uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
-<application
-    android:allowBackup="true"
-    android:dataExtractionRules="@xml/data_extraction_rules"
-    android:fullBackupContent="@xml/backup_rules"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    android:theme="@style/Theme.TNShinglass"
-    android:name=".application.ShinglassApplication"
-    tools:targetApi="31">
-    <activity
-        android:name=".activity.AppActivity"
-        android:exported="true">
-        <nav-graph android:value="@navigation/nav_main" />
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+    <application
+        android:name=".application.ShinglassApplication"
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.TNShinglass"
+        tools:targetApi="31">
+        <activity
+            android:name=".activity.AppActivity"
+            android:exported="true">
+            <nav-graph android:value="@navigation/nav_main" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-    <activity android:name=".activity.SettingsActivity"
-        android:exported="false">
-    </activity>
-<!--    <service android:name="ru.tn.shinglass.api.Service1C">-->
-<!--        &lt;!&ndash;            android:enabled="true"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:exported="true">&ndash;&gt;-->
-<!--    </service>-->
-</application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.SettingsActivity"
+            android:exported="false"></activity>
+        <!--    <service android:name="ru.tn.shinglass.api.Service1C">-->
+        <!--        &lt;!&ndash;            android:enabled="true"&ndash;&gt;-->
+        <!--        &lt;!&ndash;            android:exported="true">&ndash;&gt;-->
+        <!--    </service>-->
+    </application>
 
 </manifest>
